--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <link rel="stylesheet" href="./passcode_files/main.css">
-    <script src="./passcode_files/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="./passcode_files/jquery.qrcode.min.js"></script>
+    <link rel="stylesheet" href="./浙江大学通行码_files/main.css">
+    <script src="./浙江大学通行码_files/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="./浙江大学通行码_files/jquery.qrcode.min.js"></script>
     <script>
         setTimeout("location=location; ", (24 * 3600 * 1000) * 3);
     </script>
@@ -219,7 +219,7 @@
 
 
 <body class="blue-bg">
-<div class="banner"><img src="./passcode_files/text.png"></div>
+<div class="banner"><img src="./浙江大学通行码_files/text.png"></div>
 
 
 <div class="content-box">
@@ -241,7 +241,7 @@
         <div id="output" style="margin-top: 10px;margin-bottom: 10px">
             <!--canvas width="180" height="180"></canvas-->
             <div width="180px" height="180px">
-                <img src="./passcode_files/qrcode.png">
+                <img src="./浙江大学通行码_files/qrcode.png">
             </div>
 
         </div>
