--- a/浙江大学通行码.html
+++ b/浙江大学通行码.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <!-- saved from url=(0095)http://8.210.152.95:8000/?name=%E9%99%88%E5%A5%95%E6%B3%BD&identity=%E6%9C%AC%E7%A7%91%E7%94%9F -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
 
-    <title>passcode</title>
+
+    <title>浙江大学通行码</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <link rel="stylesheet" href="./passcode_files/main.css">
-    <script src="./passcode_files/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="./passcode_files/jquery.qrcode.min.js"></script>
+    <link rel="stylesheet" href="./浙江大学通行码_files/main.css">
+    <script src="./浙江大学通行码_files/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="./浙江大学通行码_files/jquery.qrcode.min.js"></script>
     <script>
         setTimeout("location=location; ", (24 * 3600 * 1000) * 3);
     </script>
@@ -219,76 +219,76 @@
 
 
 <body class="blue-bg">
-    <div class="banner"><img src="./passcode_files/text.png"></div>
+<div class="banner"><img src="./浙江大学通行码_files/text.png"></div>
 
 
-    <div class="content-box">
-        <div class="top-title">
-            <h3 id="name">陈奕泽的通行码</h3>
+<div class="content-box">
+    <div class="top-title">
+        <h3 id="name">陈奕泽的通行码</h3>
 
 
-            <span class="bgr-blue">本科生</span>
+        <span class="bgr-blue">本科生</span>
 
 
-        </div>
+    </div>
 
-        <strong>
+    <strong>
         <div class="time2" id="div_timer" style="white-space: pre;">06月23日<br>19:17:54</div>
     </strong>
 
-        <div class="qr">
+    <div class="qr">
 
-            <div id="output" style="margin-top: 10px;margin-bottom: 10px">
-                <!--canvas width="180" height="180"></canvas-->
-                <div width="180px" height="180px">
-                    <img src="./passcode_files/qrcode.png">
-                </div>
-
+        <div id="output" style="margin-top: 10px;margin-bottom: 10px">
+            <!--canvas width="180" height="180"></canvas-->
+            <div width="180px" height="180px">
+                <img src="./浙江大学通行码_files/qrcode.png">
             </div>
-        </div>
-
-
-        <div class="time">有效期：2022-06-22 - 2022-06-28</div>
-        <div id="ym">
-            <div id="ymContent" class="hz" style="color: #da9414">已接种3针新冠疫苗</div>
-        </div>
-        <div id="hs" style="text-align: center;align-items: center;display: flex;justify-content:center;align-items:center;">
-
-            <lb id="lb_hs"> <button style="background: #55b957;border: 0px;height: 80px;width: 120px;border-radius: 5px;margin: 5px;"><span style="color: white;">最近核酸采样</span><br>
-                <span style="color: white;">2022年6月22日 03:35</span><br>
-                <span style="color: white;">阴性</span></button></lb>
-            <lb id="lb_jkm"> <button style="background: #55b957;border: 0px;height: 80px;width: 120px;border-radius: 5px;margin: 5px;">                    <span style="color: white;">健康码</span><br>
-                <span style="color: white;font-size:25px">绿码</span></button></lb>
 
         </div>
-        <div style="text-align:center; 
+    </div>
+
+
+    <div class="time">有效期：2022-06-22 - 2022-06-28</div>
+    <div id="ym">
+        <div id="ymContent" class="hz" style="color: #da9414">已接种3针新冠疫苗</div>
+    </div>
+    <div id="hs" style="text-align: center;align-items: center;display: flex;justify-content:center;align-items:center;">
+
+        <lb id="lb_hs"> <button style="background: #55b957;border: 0px;height: 80px;width: 120px;border-radius: 5px;margin: 5px;"><span style="color: white;">最近核酸采样</span><br>
+            <span style="color: white;">2022年6月22日 03:35</span><br>
+            <span style="color: white;">阴性</span></button></lb>
+        <lb id="lb_jkm"> <button style="background: #55b957;border: 0px;height: 80px;width: 120px;border-radius: 5px;margin: 5px;">                    <span style="color: white;">健康码</span><br>
+            <span style="color: white;font-size:25px">绿码</span></button></lb>
+
+    </div>
+    <div style="text-align:center;
             margin:auto auto; 
             background: rgb(91,145,201);
             border: 0px;height: 30px;
             width: 250px;border-radius: 5px;">
-            <a style="text-decoration: none" href="https://ur.alipay.com/43EwUEYDXm7MjnONin4OpB" target="_blank"><span style="color: white;">
+        <a style="text-decoration: none" href="https://ur.alipay.com/43EwUEYDXm7MjnONin4OpB" target="_blank"><span style="color: white;">
                 行程卡:14天是否到过中高风险地区
             </span></a>
-            
-            <div id="hzjkm"></div>
+
+        <div id="hzjkm"></div>
 
 
-            <div id="dateTime"></div>
-            <p class="tip" style="margin-top: 10px;">凭蓝码可在浙江大学校园内通行<br>请主动出示，配合检查</p>
+        <div id="dateTime"></div>
+        <p class="tip" style="margin-top: 10px;">凭蓝码可在浙江大学校园内通行<br>请主动出示，配合检查</p>
 
 
-            <div style="text-align:center; margin-top: 10px">
-                <a target="_blank" href="http://one.zju.edu.cn/taskcenter/wechat/index">申请流程</a>&nbsp;&nbsp;&nbsp;
-                <a target="_blank" href="http://one.zju.edu.cn/pass_code/zx/getList">申请记录</a>&nbsp;&nbsp;&nbsp;
+        <div style="text-align:center; margin-top: 10px">
+            <a target="_blank" href="http://one.zju.edu.cn/taskcenter/wechat/index">申请流程</a>&nbsp;&nbsp;&nbsp;
+            <a target="_blank" href="http://one.zju.edu.cn/pass_code/zx/getList">申请记录</a>&nbsp;&nbsp;&nbsp;
 
 
-            </div>
-            <div class="bottom-tip">
-                <h3>安 保 处 ：0571-88206110</h3>
-                <a href="http://xwfw.zju.edu.cn/mobile/redir.php?catalog_id=371039" target="_blank" class="link-btn">常见问题</a>
-                <h3>技术支持：0571-87951669</h3>
-            </div>
         </div>
+        <div class="bottom-tip">
+            <h3>安 保 处 ：0571-88206110</h3>
+            <a href="http://xwfw.zju.edu.cn/mobile/redir.php?catalog_id=371039" target="_blank" class="link-btn">常见问题</a>
+            <h3>技术支持：0571-87951669</h3>
+        </div>
+    </div>
 
 
 
