--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 return null;
             }
 
-            var name = getQueryString("identity");
+            var name = getQueryString("name");
             var identity = getQueryString("identity");
 
             if (identity != null) {
