--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Email: <a href="mailto:yic093@ucsd.edu">yic093@ucsd.edu</a></p>
 <li>An adventure in the solar system that's about to explode</li>
 <li>Jump into the blackhole</li>
 </ul>
-<p><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\SpaceRoverCover.jpg" alt=""></p>
+<p><img src="Images\SpaceRoverCover.jpg" alt=""></p>
 <blockquote>
 <p><strong>Check out</strong> my <a href="https://www.bilibili.com/video/BV16b4y1B7pc?share_source=copy_web&amp;vd_source=8526efc45b6cabb30a409be5048ff71d">demo video</a> and our <a href="https://github.com/Adam-2000/SpaceRover">project code</a></p>
 <h5 id="inspired-by-outer-wilds">Inspired by <a href="https://store.steampowered.com/app/753640/Outer_Wilds/"><em>Outer Wilds</em></a></h5>
@@ -103,7 +103,7 @@ Email: <a href="mailto:yic093@ucsd.edu">yic093@ucsd.edu</a></p>
 <li>Frame buffer graphic output structure developed by me</li>
 <li>64-color palette</li>
 </ul>
-<p><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\ShadowNinjaCover.png" alt=""></p>
+<p><img src="Images\ShadowNinjaCover.png" alt=""></p>
 <blockquote>
 <p><strong>Check out</strong> my <a href="https://www.bilibili.com/video/BV1ap4y1B7Pc?share_source=copy_web&amp;vd_source=8526efc45b6cabb30a409be5048ff71d">demo video</a> and our <a href="https://github.com/Adam-2000/ShadowNinja">project code</a></p>
 </blockquote>
@@ -117,17 +117,17 @@ Email: <a href="mailto:yic093@ucsd.edu">yic093@ucsd.edu</a></p>
 <h2 id="ray-tracer">Ray Tracer</h2>
 <ul>
 <li>Grid Acceleration: 40k triangles bunny rendered in 4 sec by CPU (Reduced from 20 minutes) <a href="https://github.com/Adam-2000/MIT_6.837/tree/main/Assignment6">[link]</a></br>
-<img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\bunny.png" alt=""> <img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\bunnyGrid.png" alt=""> </br>
-<img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\bunnyLog.png" alt=""></li>
+<img src="Images\bunny.png" alt=""> <img src="Images\bunnyGrid.png" alt=""> </br>
+<img src="Images\bunnyLog.png" alt=""></li>
 <li>Reflection &amp; Refraction &amp; Shadows &amp; Super-Sampling Anti-Aliasing <a href="https://github.com/Adam-2000/MIT_6.837/tree/main/Assignment7">[link]</a></br>
-<img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\sphere.png" alt=""> <img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\diamond.png" alt=""> <img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\text.png" alt=""></li>
+<img src="Images\sphere.png" alt=""> <img src="Images\diamond.png" alt=""> <img src="Images\text.png" alt=""></li>
 <li>Curves &amp; Surfaces <a href="https://github.com/Adam-2000/MIT_6.837/tree/main/Assignment8">[link]</a></br>
-<img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\teapot.png" alt=""> <img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\surface.png" alt=""></li>
+<img src="Images\teapot.png" alt=""> <img src="Images\surface.png" alt=""></li>
 </ul>
 <h3 id="global-illumination">Global Illumination</h3>
 <ul>
 <li>Monte-Carlo Intergration &amp; Russian Roulette &amp; BVH Tree Acceleration <a href="https://github.com/Adam-2000/Games101/tree/main/Assignment7">[link]</a></br>
-<img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\room.png" alt=""></li>
+<img src="Images\room.png" alt=""></li>
 </ul>
 <h2 id="opengl-shader-link">OpenGL Shader <a href="https://github.com/Adam-2000/OpenGL-Shader">[link]</a></h2>
 <ul>
@@ -142,15 +142,15 @@ Email: <a href="mailto:yic093@ucsd.edu">yic093@ucsd.edu</a></p>
 </thead>
 <tbody>
 <tr>
-<td><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\nanosuit1.jpg" alt=""></td>
-<td><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\nanosuit2.jpg" alt=""></td>
+<td><img src="Images\nanosuit1.jpg" alt=""></td>
+<td><img src="Images\nanosuit2.jpg" alt=""></td>
 </tr>
 <tr>
-<td><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\winter-girl1.jpg" alt=""></td>
-<td><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\winter-girl2.jpg" alt=""></td>
+<td><img src="Images\winter-girl1.jpg" alt=""></td>
+<td><img src="Images\winter-girl2.jpg" alt=""></td>
 </tr>
 <tr>
-<td><img src="file:///e:\Study\OnlineCourses\Adam-2000.github.io\Images\scifi-girl.jpg" alt=""></td>
+<td><img src="Images\scifi-girl.jpg" alt=""></td>
 <td></td>
 </tr>
 </tbody>
